# shuffle

./: Cargo.toml  LICENSE  README.md  test-all-features.sh
.github/workflows/: build-and-test.yml
src/: fy.rs  irs.rs  lib.rs  shuffler.rs
