[package]
name = "shuffle"
version = "0.1.7"
authors = ["Adam Budziak <adambudziak@protonmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/adambudziak/shuffle"
description = "Implementation of various shuffling algorithms over slices."
documentation = "https://docs.rs/shuffle"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.1", default-features = false }
bitvec = "1.0.1"
