[package]
name = "shuffle"
version = "0.2.0"
authors = ["Adam Budziak <adambudziak@protonmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/adambudziak/shuffle"
description = "Implementation of various shuffling algorithms over slices."
documentation = "https://docs.rs/shuffle"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rand-0_9"]
rand-0_8 = ["dep:rand-0_8"]
rand-0_9 = ["dep:rand-0_9"]

[dependencies]
# Deactivate default features in order to be able to use this on systems without
# access to an entropy souce via getrandom such as wasm32-unknown-unknown
rand-0_8 = { package = "rand", version = "0.8", default-features = false, optional = true }
rand-0_9 = { package = "rand", version = "0.9", default-features = false, optional = true }

bitvec = "0.17.4"
